argocd/prod/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-prisma
  namespace: prod
  labels:
    app: prisma
    tier: backend
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: backend-prisma
    tags.datadoghq.com/version: latest
  annotations:
    ad.datadoghq.com/backend-prisma.logs: '[{"source": "backend-prisma","service": "backend-prisma","tags": ["env:prod"]}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prisma
      tier: backend
  template:
    metadata:
      name: backend-prisma
      labels:
        app: prisma
        tier: backend
        tags.datadoghq.com/env: prod
        tags.datadoghq.com/service: backend-prisma
        tags.datadoghq.com/version: latest
        admission.datadoghq.com/enabled: "true"
      annotations:
        linkerd.io/inject: enabled
        admission.datadoghq.com/java-lib.version: v1.2.0
    spec:
      containers:
        - name: backend-prisma
          image: jensdl/backend:prod.v22.12.23
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              path: /actuator
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: smb-prodbe-logs
              mountPath: "/logs"
              readOnly: false
            - name: smb-prodbe-files
              mountPath: "/.data"
              readOnly: false
      volumes:
        - name: smb-prodbe-logs
          persistentVolumeClaim:
            claimName: pvc-smb-prodbe-logs
        - name: smb-prodbe-files
          persistentVolumeClaim:
            claimName: pvc-smb-prodbe-files
