argocd/prod/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: prod
spec:
  selector:
    matchLabels:
      app: prisma
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prisma
        tier: database
    spec:
      containers:
        - image: jensdl/mysql:dev.v22.12.08-12h17m
          imagePullPolicy: IfNotPresent
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: nfs-proddb
              mountPath: "/var/lib/mysql/"
              readOnly: false
      volumes:
        - name: nfs-proddb
          persistentVolumeClaim:
            claimName: pvc-nfs-proddb
