argocd/prod/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: prod
  annotations:
    linkerd.io/inject: "enabled"
spec:
  ports:
    - port: 3306
  selector:
    app: prisma
    tier: database
