argocd/prod/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-nginx-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: backend.prisma.orcraft.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend-prisma-service
            port:
              number: 8081
